err/gae-flightdeck.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gae_flightdeck-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/gaeflightdeck'...
Compiling './lib/python3.5/site-packages/gaeflightdeck/formatter.py'...
***   File "./lib/python3.5/site-packages/gaeflightdeck/formatter.py", line 41
    print format_log(parts)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gaeflightdeck/server.py'...
***   File "./lib/python3.5/site-packages/gaeflightdeck/server.py", line 48
    print 'Log webserver running on http://127.0.0.1:51324'
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/gevent_socketio-0.3.6.egg-info'...
Listing './lib/python3.5/site-packages/gevent_websocket-0.10.1.dist-info'...
Listing './lib/python3.5/site-packages/geventwebsocket'...
Listing './lib/python3.5/site-packages/geventwebsocket/gunicorn'...
Listing './lib/python3.5/site-packages/geventwebsocket/protocols'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/socketio'...
Compiling './lib/python3.5/site-packages/socketio/namespace.py'...
***   File "./lib/python3.5/site-packages/socketio/namespace.py", line 170
    print "ERROR: No such callback for ackId %s" % packet['ackId']
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/socketio/packet.py'...
***   File "./lib/python3.5/site-packages/socketio/packet.py", line 156
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socketio/server.py'...
***   File "./lib/python3.5/site-packages/socketio/server.py", line 108
    except error, ex:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socketio/virtsocket.py'...
***   File "./lib/python3.5/site-packages/socketio/virtsocket.py", line 365
    except (ValueError, KeyError, Exception), e:
                                            ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
